javascript year in footer

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
   </div>
   <footer class="rounded border mt-3 border-blue-600 text-center p-2">
-    <span class="text-gray-500 dark:text-gray-400">© 2022 <a href="https://mr-incognito.ir/"
+    <span class="text-gray-500 dark:text-gray-400">© 2022-<script>document.write(new Date().getFullYear())</script> <a href="https://mr-incognito.ir/"
         class="hover:underline">Incognito Coder</a>. Designed By <i class="fa-solid fa-heart text-red-600"></i></span>
   </footer>
 </body>
