--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
   </script>
 </head>
 
-<body class="dark:bg-slate-900 dark:text-slate-300 container mx-auto rounded-xl p-5">
+<body
+  class="dark:text-slate-300 container mx-auto rounded-xl p-5 bg-gradient-to-r dark:from-slate-800 dark:to-slate-900 from-indigo-300 via-indigo-300 to-gray-300">
 
-  <div class="rounded border pl-3 pr-3 pt-5 pb-5 border-emerald-600 shadow-xl">
+  <div
+    class="rounded border pl-3 pr-3 pt-5 pb-5 border-emerald-600 shadow-xl backdrop-filter backdrop-blur bg-opacity-50">
     <button id="theme-toggle" type="button"
       class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
       <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
@@ -39,7 +41,7 @@
     <img class="w-52 h-52 rounded-full mx-auto md:w-80 md:h-80 hover:grayscale" src="images/ahmand.jpg" alt=""
       width="512" height="512">
     <p class="dark:text-stone-400 font-bold font-sans text-center mt-5 text-xl">Alireza Ah-Mand</p>
-    <p class="text-gray-700 dark:text-stone-200 font-medium font-sans text-center mt-1">A 22 Years Old Boy From
+    <p class="text-gray-700 dark:text-stone-200 font-medium font-sans text-center mt-1">A 23 Years Old Boy From
       North of Iran
       Skilled As PHP, Python Programmer & Senior Android
       Developer<br>Interested in GNU Linux Distributions such ArchLinux and Application Cracking.</p>
@@ -51,7 +53,7 @@
       <a href="https://facebook.com/mr.alireza.ahmand"><i class="fa-brands fa-square-facebook"></i></a>
     </div>
   </div>
-  <div class="lg:flex">
+  <div class="lg:flex backdrop-filter backdrop-blur bg-opacity-50">
     <div class="rounded border mt-3 pl-3 pt-5 pb-5 md:pr-5 border-pink-600 shadow-xl">
       <h1 class="font-extrabold text-lg"><i class="fa-solid fa-circle-info"></i> Information</h1>
       <div class="font-medium font-sans dark:text-stone-200">
@@ -86,8 +88,10 @@
     </div>
   </div>
   <footer class="rounded border mt-3 border-blue-600 text-center p-2">
-    <span class="text-gray-500 dark:text-gray-400">© 2022-<script>document.write(new Date().getFullYear())</script> <a href="https://mr-incognito.ir/"
-        class="hover:underline">Incognito Coder</a>. Designed By <i class="fa-solid fa-heart text-red-600"></i></span>
+    <span class="text-gray-500 dark:text-gray-400">© 2022-
+      <script>document.write(new Date().getFullYear())</script> <a href="https://mr-incognito.ir/"
+        class="hover:underline">Incognito Coder</a>. Designed By <i class="fa-solid fa-heart text-red-600"></i>
+    </span>
   </footer>
 </body>
 <script>
