--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 </head>
 
 <body
-  class="dark:text-slate-300 container mx-auto rounded-xl p-5 bg-gradient-to-r dark:from-slate-800 dark:to-slate-900 from-indigo-300 via-indigo-300 to-gray-300">
+  class="dark:text-slate-300 container mx-auto rounded-xl p-5 bg-gradient-to-r dark:from-slate-700 dark:via-slate-700 dark:to-slate-800 from-blue-300 via-blue-300 to-blue-400">
 
   <div
-    class="rounded border pl-3 pr-3 pt-5 pb-5 border-emerald-600 shadow-xl backdrop-filter backdrop-blur bg-opacity-50">
+    class="rounded border pl-3 pr-3 pt-5 pb-5 border-slate-600 shadow-xl backdrop-filter backdrop-blur bg-opacity-50">
     <button id="theme-toggle" type="button"
       class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
       <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
@@ -40,8 +40,8 @@
     </button>
     <img class="w-52 h-52 rounded-full mx-auto md:w-80 md:h-80 hover:grayscale" src="images/ahmand.jpg" alt=""
       width="512" height="512">
-    <p class="dark:text-stone-400 font-bold font-sans text-center mt-5 text-xl">Alireza Ah-Mand</p>
-    <p class="text-gray-700 dark:text-stone-200 font-medium font-sans text-center mt-1">A 23 Years Old Boy From
+    <p class="dark:text-stone-400 font-['Vazirmatn'] text-center mt-5 text-xl">Alireza Ah-Mand</p>
+    <p class="text-gray-800 dark:text-stone-200 font-['Vazirmatn'] text-center mt-1">A 23 Years Old Boy From
       North of Iran
       Skilled As PHP, Python Programmer & Senior Android
       Developer<br>Interested in GNU Linux Distributions such ArchLinux and Application Cracking.</p>
@@ -54,9 +54,9 @@
     </div>
   </div>
   <div class="lg:flex backdrop-filter backdrop-blur bg-opacity-50">
-    <div class="rounded border mt-3 pl-3 pt-5 pb-5 md:pr-5 border-pink-600 shadow-xl">
-      <h1 class="font-extrabold text-lg"><i class="fa-solid fa-circle-info"></i> Information</h1>
-      <div class="font-medium font-sans dark:text-stone-200">
+    <div class="rounded border mt-3 pl-3 pt-5 pb-5 md:pr-5 border-slate-600 shadow-xl">
+      <h1 class="font-['Vazirmatn'] text-lg"><i class="fa-solid fa-circle-info"></i> Information</h1>
+      <div class="font-['Vazirmatn'] dark:text-stone-200">
         <i class="fa-solid fa-code"></i> Programming Languages :
         <ul class="list-none pl-5">
           <li><i class="fa-brands fa-java"></i> Java</li>
@@ -74,21 +74,22 @@
         </ul>
       </div>
     </div>
-    <div class="rounded border mt-3 pl-3 pt-5 pb-5 lg:ml-3 border-orange-600 shadow-xl lg:flex-grow">
-      <h1 class="font-extrabold text-lg"><i class="fa-solid fa-circle-info"></i> Educations</h1>
-      <p class="dark:text-stone-200 font-sm font-sans"><b>2020 - Now</b><br>Bachelor's student in
+    <div class="rounded border mt-3 pl-3 pt-5 pb-5 lg:ml-3 border-slate-600 shadow-xl lg:flex-grow">
+      <h1 class="font-['Vazirmatn'] text-lg"><i class="fa-solid fa-circle-info"></i> Educations</h1>
+      <p class="dark:text-stone-200 font-['Vazirmatn']"><b>2020 - Now</b><br>Bachelor's student in
         computer engineering at Payame Nour University of Babol.</p>
-      <p class="dark:text-stone-200 font-sm font-sans"><b>2017 - 2020</b><br>Student of Experimental Science in Shahid
+      <p class="dark:text-stone-200 font-['Vazirmatn']"><b>2017 - 2020</b><br>Student of Experimental Science in Shahid
         Beheshti
         High School in Babolsar.</p>
-      <p class="dark:text-stone-200 font-sm font-sans"><b>2014 - 2017</b><br>Student at Nabi Akram School in Dughi Kola.
+      <p class="dark:text-stone-200 font-['Vazirmatn']"><b>2014 - 2017</b><br>Student at Nabi Akram School in Dughi
+        Kola.
       </p>
-      <p class="dark:text-stone-200 font-sm font-sans"><b>2008 - 2014</b><br>Student at Imam Ali school in Dughi Kola.
+      <p class="dark:text-stone-200 font-['Vazirmatn']"><b>2008 - 2014</b><br>Student at Imam Ali school in Dughi Kola.
       </p>
     </div>
   </div>
-  <footer class="rounded border mt-3 border-blue-600 text-center p-2">
-    <span class="text-gray-500 dark:text-gray-400">© 2022-
+  <footer class="rounded border mt-3 border-slate-600 text-center p-2">
+    <span class="text-gray-900 dark:text-gray-400">© 2022-
       <script>document.write(new Date().getFullYear())</script> <a href="https://mr-incognito.ir/"
         class="hover:underline">Incognito Coder</a>. Designed By <i class="fa-solid fa-heart text-red-600"></i>
     </span>
