--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="dark">
+<html lang="en" class="dark">
 
 <head>
   <meta charset="UTF-8">
@@ -10,22 +10,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.2.3/css/flag-icons.min.css" />
+  <link rel="icon" href="images/favicon.png" type="image/png">
   <title>Alireza Ahmand</title>
-  <script>
-    if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-      document.documentElement.classList.add('dark');
-    } else {
-      document.documentElement.classList.remove('dark')
-    }
-  </script>
 </head>
 
 <body
   class="dark:text-slate-300 container mx-auto rounded-xl p-5 bg-gradient-to-r dark:from-slate-700 dark:via-slate-700 dark:to-slate-800 from-blue-300 via-blue-300 to-blue-400">
 
-  <div
-    class="rounded border pl-3 pr-3 pt-5 pb-5 border-slate-600 shadow-xl backdrop-filter backdrop-blur bg-opacity-50">
+  <div class="rounded border px-3 py-3 border-slate-600 shadow-xl backdrop-filter backdrop-blur bg-opacity-50">
     <button id="theme-toggle" type="button"
       class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
       <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
@@ -41,116 +34,213 @@
     </button>
     <img class="w-52 h-52 rounded-full mx-auto md:w-80 md:h-80 hover:grayscale" src="images/ahmand.jpg" alt=""
       width="512" height="512">
-    <p class="dark:text-stone-400 font-['Vazirmatn'] text-center mt-5 text-xl">Alireza Ah-Mand</p>
-    <p class="text-gray-800 dark:text-stone-200 font-['Vazirmatn'] text-center mt-1">A <span id="age"></span> Years Old
-      Boy From
-      North of Iran
-      Skilled As PHP, Python Programmer & Senior Android
-      Developer<br>Interested in GNU Linux Distributions such ArchLinux and Application Cracking.</p>
-    <div class="text-center text-2xl mt-3">
+    <p class="dark:text-stone-400 font-['Vazirmatn'] text-center mt-5 text-xl"><span id="name"></span></p>
+    <p class="text-gray-800 dark:text-stone-200 font-['Vazirmatn'] text-center mt-1"><span id="age"></span></p>
+    <div class="text-center text-2xl mt-2">
       <a href="https://github.com/Incognito-Coder"><i class="fab fa-github"></i></a>
       <a href="https://twitter.com/Mr_Ahmand"><i class="fab fa-twitter"></i></a>
       <a href="https://www.instagram.com/alireza.ahmand/"><i class="fab fa-instagram"></i></a>
       <a href="https://telegram.me/Incognito_Coder"><i class="fab fa-telegram"></i></a>
       <a href="https://facebook.com/mr.alireza.ahmand"><i class="fa-brands fa-square-facebook"></i></a>
+      <a href="mailto:alireza.ahmand@yahoo.com"><i class="fa-brands fa-yahoo"></i></a>
     </div>
   </div>
   <div class="lg:flex backdrop-filter backdrop-blur bg-opacity-50">
-    <div class="rounded border mt-3 pl-3 pt-5 pb-5 md:pr-5 border-slate-600 shadow-xl">
-      <h1 class="font-['Vazirmatn'] text-lg"><i class="fa-solid fa-circle-info"></i> Information</h1>
+    <div class="rounded border mt-2 px-3 py-5 border-slate-600 shadow-xl">
+      <h1 class="font-['Vazirmatn'] text-lg"><i class="fa-solid fa-circle-info"></i> <span
+          data-lang-key="information"></span></h1>
       <div class="font-['Vazirmatn'] dark:text-stone-200">
-        <i class="fa-solid fa-code"></i> Programming Languages :
-        <ul class="list-none pl-5">
-          <li><i class="fa-brands fa-java"></i> Java</li>
-          <li><i class="fa-brands fa-python"></i> Python</li>
-          <li><i class="fa-brands fa-php"></i> PHP</li>
+        <i class="fa-solid fa-code"></i> <span data-lang-key="programmingLanguages"></span>
+        <ul class="list-none ltr:pl-5 rtl:pr-5">
+          <li><i class="fa-brands fa-java"></i> <span data-lang-key="java"></span></li>
+          <li><i class="fa-brands fa-python"></i> <span data-lang-key="python"></span></li>
+          <li><i class="fa-brands fa-php"></i> <span data-lang-key="php"></span></li>
         </ul>
-        <i class="fa-regular fa-address-card"></i> Personal Details :
-        <ul class="list-none pl-5 text-sm">
-          <li><i class="fa-solid fa-cake-candles"></i> Birthday : <span class="font-mono">2001-11-04</span></li>
-          <li><i class="fa-solid fa-location-dot"></i> Address : <span class="font-mono">Iran, Mazandaran,
-              Babolsar</span>
+        <i class="fa-regular fa-address-card"></i> <span data-lang-key="personalInformation"></span>
+        <ul class="list-none pl-5 rtl:pr-5 text-sm">
+          <li><i class="fa-solid fa-cake-candles"></i> <span data-lang-key="birthdayLabel"></span> <span
+              class="font-mono"><span data-lang-key="birthDate"></span></li>
+          <li><i class="fa-solid fa-location-dot"></i> <span data-lang-key="addressLabel"></span> <span
+              class="font-mono"><span data-lang-key="address"></span>
           </li>
-          <li><i class="fa-solid fa-envelope"></i> Email : <span class="font-mono">ahmand@vk.com</span></li>
-          <li><i class="fa-solid fa-phone"></i> Phone : <span class="font-mono">+1(320)-566-9438</span></li>
+          <li><i class="fa-solid fa-envelope"></i> <span data-lang-key="emailLabel"></span> <span
+              class="font-mono"><span data-lang-key="email"></span></li>
+          <li><i class="fa-solid fa-phone"></i> <span data-lang-key="phoneLabel"></span> <span class="font-mono"><span
+                data-lang-key="phone"></span></li>
         </ul>
       </div>
     </div>
-    <div class="rounded border mt-3 pl-3 pt-5 pb-5 lg:ml-3 border-slate-600 shadow-xl lg:flex-grow">
-      <h1 class="font-['Vazirmatn'] text-lg"><i class="fa-solid fa-circle-info"></i> Educations</h1>
-      <p class="dark:text-stone-200 font-['Vazirmatn']"><b>2020 - Now</b><br>Bachelor's student in
-        computer engineering at Payame Nour University of Babol.</p>
-      <p class="dark:text-stone-200 font-['Vazirmatn']"><b>2017 - 2020</b><br>Student of Experimental Science in
-        Shahid
-        Beheshti
-        High School in Babolsar.</p>
-      <p class="dark:text-stone-200 font-['Vazirmatn']"><b>2014 - 2017</b><br>Student at Nabi Akram School in Dughi
-        Kola.
-      </p>
-      <p class="dark:text-stone-200 font-['Vazirmatn']"><b>2008 - 2014</b><br>Student at Imam Ali school in Dughi
-        Kola.
-      </p>
+    <div class="rounded border mt-2 px-3 py-5 lg:ltr:ml-2 lg:rtl:mr-2 border-slate-600 shadow-xl lg:flex-grow">
+      <h1 class="font-['Vazirmatn'] text-lg"><i class="fa-solid fa-circle-info"></i> <span data-lang-key="educations">
+      </h1>
+      <p class="dark:text-stone-200 font-['Vazirmatn']"><b><span data-lang-key="20202025"></b><br><span
+          data-lang-key="text1"></span></p>
+      <p class="dark:text-stone-200 font-['Vazirmatn']"><b><span data-lang-key="20172020"></b><br><span
+          data-lang-key="text2"></span></p>
+      <p class="dark:text-stone-200 font-['Vazirmatn']"><b><span data-lang-key="20142017"></b><br><span
+          data-lang-key="text3"></span></p>
+      <p class="dark:text-stone-200 font-['Vazirmatn']"><b><span data-lang-key="20082014"></b><br><span
+          data-lang-key="text4"></span></p>
     </div>
   </div>
-  <footer class="rounded border mt-3 border-slate-600 text-center p-2">
-    <span class="text-gray-900 dark:text-gray-400">© 2022-
-      <script>document.write(new Date().getFullYear())</script> <a href="https://mr-incognito.ir/"
-        class="hover:underline">Incognito Coder</a>. Designed By <i class="fa-solid fa-heart text-red-600"></i>
-    </span>
+  <footer class="rounded border mt-2 border-slate-600 text-center py-1">
+    <span class="text-gray-900 dark:text-gray-400 footer-text"></span>
+    <button id="lang-toggle" class="text-sm p-2 rounded-lg">
+      <span id="lang-icon" class="fi fi-us"></span>
+    </button>
   </footer>
   <script>
-    function calculateAge(birthDate) {
+    const strings = {
+      en: {
+        birthDate: "2001-11-04",
+        name: "Alireza Ah-Mand",
+        ageText: "A {age} Years Old Boy From North of Iran Skilled As PHP, Python Programmer & Senior Android Developer<br>Interested in GNU Linux Distributions such ArchLinux and Application Cracking.",
+        information: "Information",
+        personalInformation: "Personal Details :",
+        birthdayLabel: "Birthday :",
+        addressLabel: "Address :",
+        emailLabel: "Email :",
+        phoneLabel: "Phone :",
+        address: "Iran, Mazandaran, Babolsar",
+        email: "ahmand@vk.com",
+        phone: "+1(320)-566-9438",
+        programmingLanguages: "Programming Languages :",
+        java: "Java",
+        python: "Python",
+        php: "PHP",
+        educations: "Education",
+        "20082014": "2008 - 2014",
+        "20142017": "2014 - 2017",
+        "20172020": "2017 - 2020",
+        "20202025": "2020 - Now",
+        text1: "Bachelor's student in computer engineering at Payame Nour University of Babol.",
+        text2: "Student of Experimental Science in Shahid Beheshti High School in Babolsar.",
+        text3: "Student at Nabi Akram School in Dughi Kola.",
+        text4: "Student at Imam Ali school in Dughi Kola.",
+        footerText: "© 2022-{year} <a href='https://mr-incognito.ir/' class='hover:underline'>Incognito Coder</a>. Designed By <i class='fa-solid fa-heart text-red-600'></i>",
+      },
+      fa: {
+        birthDate: "2001-11-04",
+        name: "علیرضا آه‌مند",
+        ageText: "یک پسر {age} ساله از شمال ایران، ماهر در برنامه‌نویسی PHP و Python و توسعه‌دهنده ارشد اندروید<br>علاقه‌مند به توزیع‌های لینوکس مانند ArchLinux و کرک برنامه‌ها.",
+        information: "اطلاعات",
+        personalInformation: "جزئیات شخصی :",
+        birthdayLabel: "تاریخ تولد :",
+        addressLabel: "آدرس :",
+        emailLabel: "ایمیل :",
+        phoneLabel: "تلفن :",
+        address: "ایران، مازندران، بابلسر",
+        email: "ahmand@vk.com",
+        phone: "+1(320)-566-9438",
+        programmingLanguages: "زبان های برنامه‌نویسی :",
+        java: "جاوا",
+        python: "پایتون",
+        php: "پی‌اچ‌پی",
+        educations: "تحصیلات",
+        "20082014": "1387 - 1393",
+        "20142017": "1393 - 1396",
+        "20172020": "1396 - 1399",
+        "20202025": "1399 - اکنون",
+        text1: "دانشجوی کارشناسی مهندسی کامپیوتر در دانشگاه پیام نور بابل.",
+        text2: "دانش‌آموز رشته علوم تجربی در دبیرستان شهید بهشتی بابلسر.",
+        text3: "دانش‌آموز در دبستان نبی اکرم در دوغی‌کلا.",
+        text4: "دانش‌آموز در دبستان امام علی در دوغی‌کلا.",
+        footerText: "© 2022-{year} <a href='https://mr-incognito.ir/' class='hover:underline'>کدنویس ناشناس</a>. طراحی شده با <i class='fa-solid fa-heart text-red-600'></i>",
+      },
+    };
+
+    const htmlElement = document.documentElement;
+
+    const calculateAge = (birthDate) => {
       const today = new Date();
       const birth = new Date(birthDate);
       let age = today.getFullYear() - birth.getFullYear();
       const monthDifference = today.getMonth() - birth.getMonth();
-      if (monthDifference < 0 || (monthDifference === 0 && today.getDate() < birth.getDate())) { age--; } return age;
-    }
-    const age = calculateAge("2001-11-04");
-    document.getElementById('age').textContent = age;
+      if (monthDifference < 0 || (monthDifference === 0 && today.getDate() < birth.getDate())) {
+        age--;
+      }
+      return age;
+    };
+
+    const setLanguage = (lang) => {
+      const translations = strings[lang];
+      if (!translations) return;
+
+      document.documentElement.lang = lang;
+      document.documentElement.dir = lang === 'fa' ? 'rtl' : 'ltr'; // Set direction based on language
+      localStorage.setItem('language', lang);
+
+      // Update dynamic content
+      const age = calculateAge(translations.birthDate);
+      const nameElement = document.getElementById('name');
+      const ageElement = document.getElementById('age');
+      const footerTextElement = document.querySelector(".footer-text");
+
+      if (nameElement) nameElement.innerHTML = translations.name;
+      if (ageElement) ageElement.innerHTML = translations.ageText.replace("{age}", age);
+      if (footerTextElement) footerTextElement.innerHTML = translations.footerText.replace("{year}", new Date().getFullYear());
+
+      // Update static labels
+      document.querySelectorAll('[data-lang-key]').forEach(el => {
+        const key = el.getAttribute('data-lang-key');
+        if (translations[key]) {
+          el.innerHTML = translations[key];
+        }
+      });
+
+      // Update language icon
+      const langIcon = document.getElementById('lang-icon');
+      if (langIcon) {
+        langIcon.className = lang === 'en' ? 'fi fi-us' : 'fi fi-ir';
+      }
+    };
+    document.addEventListener('DOMContentLoaded', () => {
+      // Language toggle logic
+      const savedLang = localStorage.getItem('language') || 'en';
+      setLanguage(savedLang);
+
+      const langToggleBtn = document.getElementById('lang-toggle');
+      if (langToggleBtn) {
+        langToggleBtn.addEventListener('click', () => {
+          const newLang = document.documentElement.lang === 'en' ? 'fa' : 'en';
+          setLanguage(newLang);
+        });
+      }
+
+      const themeToggleBtn = document.getElementById('theme-toggle');
+
+      // Load saved theme from localStorage
+      const savedTheme = localStorage.getItem('theme') || 'dark';
+      if (savedTheme === 'dark') {
+        htmlElement.classList.add('dark');
+      } else {
+        htmlElement.classList.remove('dark');
+      }
+
+      // Update theme icons visibility
+      const updateIcons = () => {
+        const darkIcon = document.getElementById('theme-toggle-dark-icon');
+        const lightIcon = document.getElementById('theme-toggle-light-icon');
+        if (htmlElement.classList.contains('dark')) {
+          darkIcon.classList.add('hidden');
+          lightIcon.classList.remove('hidden');
+        } else {
+          darkIcon.classList.remove('hidden');
+          lightIcon.classList.add('hidden');
+        }
+      };
+
+      updateIcons();
+
+      // Add event listener for theme toggle
+      themeToggleBtn.addEventListener('click', () => {
+        const isDark = htmlElement.classList.toggle('dark');
+        localStorage.setItem('theme', isDark ? 'dark' : 'light');
+        updateIcons();
+      });
+    });
+
   </script>
 </body>
-<script>
-  var themeToggleDarkIcon = document.getElementById('theme-toggle-dark-icon');
-  var themeToggleLightIcon = document.getElementById('theme-toggle-light-icon');
-
-  // Change the icons inside the button based on previous settings
-  if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-    themeToggleLightIcon.classList.remove('hidden');
-  } else {
-    themeToggleDarkIcon.classList.remove('hidden');
-  }
-
-  var themeToggleBtn = document.getElementById('theme-toggle');
-
-  themeToggleBtn.addEventListener('click', function () {
-
-    // toggle icons inside button
-    themeToggleDarkIcon.classList.toggle('hidden');
-    themeToggleLightIcon.classList.toggle('hidden');
-
-    // if set via local storage previously
-    if (localStorage.getItem('color-theme')) {
-      if (localStorage.getItem('color-theme') === 'light') {
-        document.documentElement.classList.add('dark');
-        localStorage.setItem('color-theme', 'dark');
-      } else {
-        document.documentElement.classList.remove('dark');
-        localStorage.setItem('color-theme', 'light');
-      }
-
-      // if NOT set via local storage previously
-    } else {
-      if (document.documentElement.classList.contains('dark')) {
-        document.documentElement.classList.remove('dark');
-        localStorage.setItem('color-theme', 'light');
-      } else {
-        document.documentElement.classList.add('dark');
-        localStorage.setItem('color-theme', 'dark');
-      }
-    }
-
-  });
-</script>
 
 </html>
