--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         "20202025": "2020 - Now",
         text1: "Bachelor's student in computer engineering at Payame Nour University of Babol.",
         text2: "Student of Experimental Science in Shahid Beheshti High School in Babolsar.",
-        text3: "Student at Nabi Akram School in Dughi Kola.",
+        text3: "Student at Nabi Akram Mid-School in Dughi Kola.",
         text4: "Student at Imam Ali school in Dughi Kola.",
         footerText: "© 2022-{year} <a href='https://mr-incognito.ir/' class='hover:underline'>Incognito Coder</a>. Designed By <i class='fa-solid fa-heart text-red-600'></i>",
       },
@@ -143,7 +143,7 @@
         "20202025": "1399 - اکنون",
         text1: "دانشجوی کارشناسی مهندسی کامپیوتر در دانشگاه پیام نور بابل.",
         text2: "دانش‌آموز رشته علوم تجربی در دبیرستان شهید بهشتی بابلسر.",
-        text3: "دانش‌آموز در دبستان نبی اکرم در دوغی‌کلا.",
+        text3: "دانش‌آموز در مدرسه راهنمایی نبی اکرم در دوغی‌کلا.",
         text4: "دانش‌آموز در دبستان امام علی در دوغی‌کلا.",
         footerText: "© 2022-{year} <a href='https://mr-incognito.ir/' class='hover:underline'>کدنویس ناشناس</a>. طراحی شده با <i class='fa-solid fa-heart text-red-600'></i>",
       },
